L3 Info/Compilation/TD3-4/_build/default/td_4/eee_parser/Parser.mly
%token ADD SUB
%token MUL DIV REC
%token LPAR RPAR
%token <int> INT
%token EOF

%start <unit> main

%%

main:
| s EOF {}
| EOF {}

u:
| ADD   {}
| SUB   {}
| MUL   {}
| DIV   {}


s:
| INT  {}
| s u s {}
| s REC {}
| SUB s  {}
| LPAR s RPAR {}
